update some colors

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       }
 
       pre {
-        background: #d5d6db;
-        color: #565a6e;
+        background: #d3e4db;
+        color: #292f2b;
       }
 
       @media (prefers-color-scheme: dark) {
         pre {
-          background: #1a1b26;
+          background: #0b151b;
           color: var(--hljs-b-white);
         }
       }
